@@ -2,7 +2,7 @@ import com.google.protobuf.gradle.id
 
 plugins {
     id("java")
-    id ("com.google.protobuf") version "0.9.4"
+    id("com.google.protobuf") version "0.9.4"
 }
 
 group = "tech.code0"
@@ -13,6 +13,12 @@ repositories {
 }
 
 dependencies {
+    implementation("com.rabbitmq:amqp-client:5.21.0")
+    implementation("io.lettuce:lettuce-core:6.3.2.RELEASE")
+    implementation("com.gitlab.taucher2003.t2003-utils:log:1.1-beta.13")
+    compileOnly("org.projectlombok:lombok:1.18.30")
+    annotationProcessor("org.projectlombok:lombok:1.18.30")
+
     implementation("io.grpc:grpc-netty-shaded:1.64.0")
     implementation("io.grpc:grpc-protobuf:1.64.0")
     implementation("io.grpc:grpc-stub:1.64.0")
@@ -20,6 +26,10 @@ dependencies {
     implementation("com.google.protobuf:protobuf-java:4.26.1")
 
     implementation("javax.annotation:javax.annotation-api:1.3.2")
+}
+
+java.toolchain {
+    languageVersion = JavaLanguageVersion.of(21)
 }
 
 protobuf {
@@ -40,4 +50,8 @@ protobuf {
             }
         }
     }
+}
+
+tasks.withType<JavaCompile> {
+    options.compilerArgs.add("--enable-preview")
 }
